--- a/PhotoFilters/PhotoFilters/Base.lproj/Main.storyboard
+++ b/PhotoFilters/PhotoFilters/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zhH-Mv-ULn">
-                                <rect key="frame" x="0.0" y="400" width="600" height="100"/>
+                                <rect key="frame" x="0.0" y="600" width="600" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="d5v-z1-5J9"/>
                                 </constraints>
@@ -67,14 +67,23 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Nt7-Hd-Jhi">
+                                <rect key="frame" x="275" y="267" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="YmX-gU-XkY"/>
+                                    <constraint firstAttribute="height" constant="50" id="iFu-5k-oct"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="inb-a3-Sdm" firstAttribute="centerX" secondItem="1VA-aL-Mn1" secondAttribute="centerX" id="7qw-4U-rhe"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="zhH-Mv-ULn" secondAttribute="bottom" constant="100" id="9bs-q4-7Td"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="zhH-Mv-ULn" secondAttribute="bottom" constant="-100" id="9bs-q4-7Td"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1VA-aL-Mn1" secondAttribute="bottom" constant="20" id="Dlv-Cc-Emg"/>
+                            <constraint firstItem="Nt7-Hd-Jhi" firstAttribute="centerY" secondItem="inb-a3-Sdm" secondAttribute="centerY" id="IgH-be-b6N"/>
                             <constraint firstItem="inb-a3-Sdm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="JAi-GI-uLf"/>
                             <constraint firstAttribute="bottomMargin" secondItem="inb-a3-Sdm" secondAttribute="bottom" constant="90" id="LDc-z5-ArR"/>
+                            <constraint firstItem="Nt7-Hd-Jhi" firstAttribute="centerX" secondItem="inb-a3-Sdm" secondAttribute="centerX" id="O0G-np-eci"/>
                             <constraint firstItem="zhH-Mv-ULn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="Y7R-vQ-Qes"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zhH-Mv-ULn" secondAttribute="trailing" constant="-16" id="cze-LQ-bdn"/>
                             <constraint firstItem="inb-a3-Sdm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="dIs-Iw-Wui"/>
@@ -83,6 +92,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="tQ3-tM-e73"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Nt7-Hd-Jhi" id="jGz-jY-YYk"/>
                         <outlet property="filterCollectionBottom" destination="9bs-q4-7Td" id="bc0-Gw-C0C"/>
                         <outlet property="mainImageView" destination="inb-a3-Sdm" id="8Ml-Lm-MF0"/>
                         <outlet property="mainImageViewBottom" destination="LDc-z5-ArR" id="ALl-lf-nzt"/>
@@ -90,16 +100,17 @@
                         <outlet property="mainImageViewTrailing" destination="pbJ-2H-OQr" id="NF8-6r-1CQ"/>
                         <outlet property="thumbnailsCollection" destination="zhH-Mv-ULn" id="19q-fR-46V"/>
                         <segue destination="DdT-QA-djY" kind="presentation" identifier="SHOW_GALLERY" id="JMT-OU-mbA"/>
+                        <segue destination="24x-ha-ojP" kind="presentation" identifier="SHOW_FRAMEWORK_VC" id="SB8-75-SUL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="952" y="136"/>
         </scene>
-        <!--View Controller-->
+        <!--Photo FrameworkVC-->
         <scene sceneID="BtB-gg-EsU">
             <objects>
-                <viewController id="24x-ha-ojP" sceneMemberID="viewController">
+                <viewController id="24x-ha-ojP" customClass="PhotoFrameworkVC" customModule="PhotoFilters" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2lO-dB-C1L"/>
                         <viewControllerLayoutGuide type="bottom" id="6IZ-sH-92Q"/>
@@ -111,22 +122,40 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IpI-My-acA">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bJh-OQ-jsM">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="h4v-Mh-09D">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FRAMEWORK_CELL" id="h4v-Mh-09D" customClass="FrameworkCell" customModule="PhotoFilters" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fj5-1b-ksK">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="Fj5-1b-ksK" firstAttribute="leading" secondItem="h4v-Mh-09D" secondAttribute="leadingMargin" constant="-8" id="3aS-aM-k7i"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Fj5-1b-ksK" secondAttribute="bottom" constant="-8" id="P8A-h3-gPx"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Fj5-1b-ksK" secondAttribute="trailing" constant="-8" id="ibU-Kv-7H3"/>
+                                            <constraint firstItem="Fj5-1b-ksK" firstAttribute="top" secondItem="h4v-Mh-09D" secondAttribute="topMargin" constant="-8" id="jOf-CP-Pot"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="Fj5-1b-ksK" id="sbK-QT-AlV"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="24x-ha-ojP" id="8gC-ha-W4X"/>
+                                    <outlet property="delegate" destination="24x-ha-ojP" id="tgh-QG-bxE"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -137,6 +166,9 @@
                             <constraint firstItem="IpI-My-acA" firstAttribute="leading" secondItem="Apd-jR-M0o" secondAttribute="leadingMargin" constant="-16" id="xm5-cB-Ntn"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="photoFrameworkCollection" destination="IpI-My-acA" id="0KC-2K-7L6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bco-8N-3dc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
